// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.Select.Option props checkGrammar=false 1`] = `
<Link
  checkGrammar={false}
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props checkGrammar=true 1`] = `
<Link
  checkGrammar={true}
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props checkHighlight=false 1`] = `
<Link
  checkHighlight={false}
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props checkHighlight=true 1`] = `
<Link
  checkHighlight={true}
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props checkSpaces=false 1`] = `
<Link
  checkSpaces={false}
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props checkSpaces=true 1`] = `
<Link
  checkSpaces={true}
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props className="my-classname" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item my-classname"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props className="test-classname" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item test-classname"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props content="This is Content from ContentMixin" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="This is Content from ContentMixin"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props content=12345 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content={12345}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props controlled=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props controlled=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props default props 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props disabled=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props disabled=false 3`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props disabled=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props disabled=true 3`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props dynamic=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props dynamic=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  dynamic={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props fullTextSearchPriority=0 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item uu-fulltextsearch-0"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props hidden=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props hidden=false 3`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props hidden=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props hidden=true 3`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props id="myId" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="myId-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props id="test-id" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="test-id-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props ignoreHTML=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props ignoreHTML=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props mainAttrs=undefined 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props name="myName" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props nestingLevel="box" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props nestingLevel="inline" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props noIndex=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props noIndex=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item uu5-noindex uu-fulltextsearch-0"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props noPrint=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props noPrint=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props onClick() 1`] = `
<Container
  id="uuID01"
>
  <Select
    id="uuID02"
    label="Issue category"
    ref_={[Function]}
  >
    <select-option
      id="uuID03"
      onClick={[Function]}
      value="Info"
    />
  </Select>
</Container>
`;

exports[`UU5.Forms.Select.Option props pureRender=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props pureRender=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  pureRender={true}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props selected=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props selected=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
  selected={true}
/>
`;

exports[`UU5.Forms.Select.Option props selectedContent="Nějaký text" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;

exports[`UU5.Forms.Select.Option props style="padding:8px; borderRadius: 2px" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Forms.Select.Option props style={"backgroundColor":"red","color":"blue"} 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Forms.Select.Option props style={"margin":8} 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Forms.Select.Option props textCorrector=false 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
  textCorrector={false}
/>
`;

exports[`UU5.Forms.Select.Option props textCorrector=true 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
  textCorrector={true}
/>
`;

exports[`UU5.Forms.Select.Option props tooltip="My Tooltip" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="option value"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  onClick={[Function]}
  ref_={[Function]}
  tooltip="My Tooltip"
/>
`;

exports[`UU5.Forms.Select.Option props value="Možnost číslo 1" 1`] = `
<Link
  className="uu5-forms-select-option uu5-forms-group-item"
  content="Možnost číslo 1"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  ref_={[Function]}
/>
`;
